# FederatedEsp

FederatedLearningESP32/: CMakeLists.txt  sdkconfig
FederatedLearningESP32/components/config/: CMakeLists.txt  configs.c
FederatedLearningESP32/components/espwebsocketclient/: esp_websocket_client.c
FederatedLearningESP32/components/federatedlearning/: federatedlearning.c
FederatedLearningESP32/components/http/: httpclient.c  httpclient.h
FederatedLearningESP32/components/websocket/: websocketclient.c  websocketclient.h
FederatedLearningESP32/main/: espconfiguration.c  espconfiguration.h  main.c
FederatedLearningServer/lib/: configs.h  httpserver.h  websockethandlers.h
FederatedLearningServer/src/: federatedlearning.c  httphandlers.c  websockethandlers.c
FederetedLearningZephyr/: CMakeLists.txt  esp32.overlay  prj.conf
FederetedLearningZephyr/data/: dataset1.csv  dataset2.csv  dataset3.csv
FederetedLearningZephyr/fs_data/: dataset.csv
FederetedLearningZephyr/include/: JSONConverter.h  espconfiguration.h  federatedlearning.h  httpclient.h  websocketclient.h
FederetedLearningZephyr/mklittlefs/: mklittlefs
FederetedLearningZephyr/src/: JSONConverter.c  cJSON.c  espconfiguration.c  federatedlearning.c  httpclient.c  main.c  websocketclient.c
